fixed race alignment and deleted mturk files

--- a/experiments/1_GE/css/local-style.css
+++ b/experiments/1_GE/css/local-style.css
@@ -145,3 +145,9 @@ td:nth-child(9) {
 .active_bold {
 	font-weight: bold;
 }
+
+.race { display: inline-block; 
+	text-align: left; 
+	margin-bottom: 10px; 
+	padding-top: '20px' 
+}
